# ai_sales_pipeline

./: .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
dashboard/: api_client.py  app.py
dashboard/pages/: 1_Pipeline_Overview.py  2_Lead_Detail.py  3_Interactions.py  4_Analytics.py  5_Chat_Assistant.py  6_Settings.py
scripts/: backup.sh  deploy.sh  embed_all.py  pull_models.sh  restore.sh  seed_data.py  setup_firewall.sh
src/: config.py  database.py  main.py
src/api/: chat.py  companies.py  contacts.py  deals.py  integrations.py  interactions.py  leads.py  router.py  tags.py
src/models/: __init__.py  base.py  company.py  contact.py  deal.py  embedding.py  interaction.py  lead.py  tag.py
src/schemas/: chat.py  company.py  contact.py  deal.py  interaction.py  lead.py  tag.py
src/services/: _embed_helper.py  company_service.py  contact_service.py  deal_service.py  gmail_service.py  interaction_service.py  lead_service.py  linkedin_service.py  rag_service.py
tests/: conftest.py
