[project]
name = "ai-sales-pipeline"
version = "0.1.0"
description = "AI-powered sales pipeline assistant with RAG-connected SLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "pgvector>=0.3",
    "llama-index-core>=0.11",
    "llama-index-vector-stores-postgres>=0.2",
    "llama-index-llms-ollama>=0.3",
    "llama-index-embeddings-ollama>=0.3",
    "streamlit>=1.37",
    "plotly>=5.22",
    "httpx>=0.27",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
